PA_Education/TestMenifest/force-app/main/default/objects/EduCurriculum__c/EduCurriculum__c.object-meta.xml
<CustomObject>
    <description>신입대상 교육 프로그램 관리 개체</description>
    <label>교육 프로그램</label>
    <nameField>
        <label>프로그램 명</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>