PA_Education/TestMenifest/force-app/main/default/objects/EduCurriculum__c/fields/Edu_Active__c.field-meta.xml
<CustomField>
    <fullName>Edu_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>현재 활성화 되어 있는 교육 프로그램</description>
    <label>활성화</label>
    <type>Checkbox</type>
</CustomField>