PA_Education/TestMenifest/force-app/main/default/objects/EduCurriculum__c/fields/Edu_Category__c.field-meta.xml
<CustomField>
    <fullName>Edu_Category__c</fullName>
    <description>프로그램 수강 대상자의 직무를 구분하기 위한 필드</description>
    <label>관련분야</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Edu_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Dev.</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>