PA_Education/TestMenifest/force-app/main/default/objects/EduCurriculum__c/fields/Edu_Note__c.field-meta.xml
<CustomField>
    <fullName>Edu_Note__c</fullName>
    <description>교육 프로그램에 대한 세부 내용</description>
    <label>비 고</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>