PA_Education/TestMenifest/force-app/main/default/objects/EduCurriculum__c/fields/Edu_Type__c.field-meta.xml
<CustomField>
    <fullName>Edu_Type__c</fullName>
    <description>교육 프로그램의 종류를 구분 짓기 위한 필드</description>
    <label>구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trailmix</fullName>
            </value>
            <value>
                <fullName>Superbadges</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Off-Line</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>