PA_Education/TestMenifest/force-app/main/default/objects/EduCurriculum__c/fields/Edu_Url__c.field-meta.xml
<CustomField>
    <fullName>Edu_Url__c</fullName>
    <description>교육 프로그램의 URL 필드</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>