PA_Education/TestMenifest/force-app/main/default/objects/EduCurriculum__c/listViews/ActivationList.listView-meta.xml
<ListView>
    <fullName>ActivationList</fullName>
    <columns>Edu_Type__c</columns>
    <columns>NAME</columns>
    <columns>Edu_Category__c</columns>
    <columns>Edu_Note__c</columns>
    <columns>Edu_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Edu_Type__c</field>
        <operation>equals</operation>
        <value>Superbadges,Certification,Off-Line,Other</value>
    </filters>
    <label>활성목록</label>
</ListView>