PA_Education/TestMenifest/force-app/main/default/objects/EduCurriculum__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Edu_Type__c</columns>
    <columns>NAME</columns>
    <columns>Edu_Category__c</columns>
    <columns>Edu_Note__c</columns>
    <columns>Edu_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>