PA_Education/TestMenifest/force-app/main/default/objects/EduCurriculum__c/listViews/ForAdminList.listView-meta.xml
<ListView>
    <fullName>ForAdminList</fullName>
    <columns>Edu_Type__c</columns>
    <columns>NAME</columns>
    <columns>Edu_Category__c</columns>
    <columns>Edu_Note__c</columns>
    <columns>Edu_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Edu_Category__c</field>
        <operation>equals</operation>
        <value>Admin,ALL</value>
    </filters>
    <label>Admin 필수 과정</label>
</ListView>