PA_Education/TestMenifest/force-app/main/default/objects/EduCurriculum__c/listViews/SelfStudyList.listView-meta.xml
<ListView>
    <fullName>SelfStudyList</fullName>
    <columns>Edu_Type__c</columns>
    <columns>NAME</columns>
    <columns>Edu_Category__c</columns>
    <columns>Edu_Note__c</columns>
    <columns>Edu_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Edu_Type__c</field>
        <operation>notEqual</operation>
        <value>Off-Line</value>
    </filters>
    <filters>
        <field>Edu_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Self-Study</label>
</ListView>